# obsidian_mcp_rest_server

./: .gitignore  Dockerfile  Dockerfile.postgres  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
app/: __init__.py  config.py  main.py  mcp_server.py
app/api/: dependencies.py  exception_handlers.py  rate_limit.py
app/api/routes/: __init__.py  auth.py  documents.py  graph.py  search.py  tables.py  vaults.py
app/api/schemas/: __init__.py  auth.py  document.py  graph.py  link.py  search.py  table.py  vault.py
app/application/dto/: __init__.py  auth_dto.py  document_dto.py  link_dto.py  search_dto.py  table_dto.py  vault_dto.py
app/application/interfaces/: __init__.py  embedding_provider.py  graph_provider.py  repositories.py  storage.py
app/application/use_cases/: base.py
app/domain/: __init__.py  exceptions.py
app/domain/entities/: __init__.py  data_table.py  document.py  document_link.py  document_table_link.py  embedding_chunk.py  folder.py  table_relationship.py  table_row.py  tag.py  user.py  vault.py
app/domain/ports/: __init__.py  repositories.py
app/domain/services/: __init__.py  csv_parser.py  formula_evaluator.py  link_resolver.py  markdown_processor.py  query_parser.py  referential_integrity.py  schema_validator.py  slug.py  tag_parser.py
app/domain/value_objects/: __init__.py  column_type.py  document_path.py  frontmatter.py  wiki_link.py
app/infrastructure/: __init__.py
app/infrastructure/age/: __init__.py  graph_adapter.py
app/infrastructure/database/: __init__.py  connection.py
app/infrastructure/embedding/: __init__.py  openai_adapter.py
app/infrastructure/mcp/: __init__.py  tools.py
app/infrastructure/pgvector/: __init__.py
app/infrastructure/storage/: __init__.py  local_storage.py
docs/: FUTURE_ROADMAP.md  MVVM_tutorial.md  TRD_brdige_system.md  TRD_knowledge_vault.md  hexagonal_tutorial.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_fix_link_text_length.py  003_structured_data.py
scripts/: import_leo_vault.py  init-db.sql  test_graph_building.py  test_leo_semantic_search.py  test_semantic_search_e2e.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  conftest.py  test_auth_routes.py  test_document_routes.py  test_graph_routes.py  test_search_routes.py  test_vault_routes.py
tests/bdd/: __init__.py  conftest.py
tests/bdd/features/: document_linking.feature  graph_queries.feature  semantic_search.feature  structured_data.feature  vault_export.feature  vault_ingestion.feature
tests/fixtures/: __init__.py
tests/integration/: __init__.py  conftest.py  test_repositories.py  test_semantic_search_e2e.py
tests/unit/: __init__.py
(+79 files in other folders)
